--- a/src/App.css
+++ b/src/App.css
@@ -53,11 +53,12 @@ img.done {
   height: 20vmin;
 }
 
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
